sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/Fleet_Requests__c.object-meta.xml
<CustomObject>
    <description>Trip legs for fleet requests</description>
    <label>Trip Leg</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Trip Leg Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Legs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>