sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Are_there_Issues_you_wish_to_escalate_to__c.field-meta.xml
<CustomField>
    <fullName>Are_there_Issues_you_wish_to_escalate_to__c</fullName>
    <label>Any Issues you wish to escalate to FMT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>