sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Assigned_Vehicle_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vehicle_Reg_Number__c</fullName>
    <label>Assigned Vehicle Reg. Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KCA 959V- (Double cabin)</fullName>
            </value>
            <value>
                <fullName>KBW 203M (Double cabin)</fullName>
            </value>
            <value>
                <fullName>KBW 063L (Double cabin)</fullName>
            </value>
            <value>
                <fullName>KBW 064L (Double cabin)</fullName>
            </value>
            <value>
                <fullName>KBW 070L (Double cabin)</fullName>
            </value>
            <value>
                <fullName>KCD 304D (Mobius)</fullName>
            </value>
            <value>
                <fullName>KCG 366G (Single cab)</fullName>
            </value>
            <value>
                <fullName>KCG 961X (single cab)</fullName>
            </value>
            <value>
                <fullName>KCH 181B (4.8 T Canter)</fullName>
            </value>
            <value>
                <fullName>KCH 182B (Hino 500- 10T truck)</fullName>
            </value>
            <value>
                <fullName>KCB 364K (FH 215- 10T truck)</fullName>
            </value>
            <value>
                <fullName>KAR 027B (Single cab)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>