sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Cargo_Details__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Details__c</fullName>
    <description>Weight, Vol, Dimensions  etc</description>
    <inlineHelpText>Weight, Vol, Dimensions  etc</inlineHelpText>
    <label>Cargo Details</label>
    <type>TextArea</type>
</CustomField>