sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>Date of Departure</description>
    <label>Departure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>