sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Designated_Driver__c.field-meta.xml
<CustomField>
    <fullName>Designated_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designated Driver</label>
    <referenceTo>Employee_Drivers__c</referenceTo>
    <relationshipName>Fleet_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>