sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kilimani</fullName>
            </value>
            <value>
                <fullName>Kinanie</fullName>
            </value>
            <value>
                <fullName>Mukuru</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>