sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Distance_Covered__c.field-meta.xml
<CustomField>
    <fullName>Distance_Covered__c</fullName>
    <formula>End_Mileage__c -  Start_Mileage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total distance covered in Kilometers</inlineHelpText>
    <label>Distance Covered (Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>