sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Driver_Required__c.field-meta.xml
<CustomField>
    <fullName>Driver_Required__c</fullName>
    <inlineHelpText>If would prefer a driver</inlineHelpText>
    <label>Driver Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Would not mind one</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>