sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/End_Mileage__c.field-meta.xml
<CustomField>
    <fullName>End_Mileage__c</fullName>
    <inlineHelpText>The vehicle&#39;s mileage value in Kilometers after the trip</inlineHelpText>
    <label>End Mileage (Km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>