sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/EPR__c.field-meta.xml
<CustomField>
    <fullName>EPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPR</label>
    <referenceTo>Electronic_Payment_Request__c</referenceTo>
    <relationshipName>Fleet_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>