sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/EPR_Payable_Item__c.field-meta.xml
<CustomField>
    <fullName>EPR_Payable_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPR Payable Item</label>
    <referenceTo>EPR_Payable_Item__c</referenceTo>
    <relationshipName>Fleet_Trips</relationshipName>
    <type>Lookup</type>
</CustomField>