sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Fleet_Request__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Request__c</fullName>
    <label>Fleet Request</label>
    <referenceTo>Fleet_Request__c</referenceTo>
    <relationshipName>Fleet_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>