sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Fleet_Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Request_Category__c</fullName>
    <label>Fleet Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Fleet</fullName>
            </value>
            <value>
                <fullName>External Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>