sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Fleet_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Request_Status__c</fullName>
    <label>Fleet Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request Open</fullName>
                <default>true</default>
                <label>Request Open</label>
            </value>
            <value>
                <fullName>Quote in Progress</fullName>
            </value>
            <value>
                <fullName>Pending TL Approval</fullName>
            </value>
            <value>
                <fullName>TL Approved</fullName>
            </value>
            <value>
                <fullName>Booking Confirmed</fullName>
            </value>
            <value>
                <fullName>Trip Completed</fullName>
            </value>
            <value>
                <fullName>Trip Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>