sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Grant_Funding_Availale_Dim_4__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Availale_Dim_4__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grant Funding Availale (Dim 4)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim4</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Fleet_Requests2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>