sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Journal_Line_Entry__c.field-meta.xml
<CustomField>
    <fullName>Journal_Line_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Line Entry</label>
    <referenceTo>c2g__codaJournalLineItem__c</referenceTo>
    <relationshipName>Fleet_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>