sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/List_them_here__c.field-meta.xml
<CustomField>
    <fullName>List_them_here__c</fullName>
    <label>List them here</label>
    <type>TextArea</type>
</CustomField>