sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Location_Dim_2__c.field-meta.xml
<CustomField>
    <fullName>Location_Dim_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location (Dim 2)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Fleet_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>