sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Number_of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passengers__c</fullName>
    <description>Number of Passengers on the trip</description>
    <inlineHelpText>Number of Passengers on the trip</inlineHelpText>
    <label>Number of Passengers</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>