sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Trip Legs</relationshipLabel>
    <relationshipName>Trip_Legs</relationshipName>
    <type>Lookup</type>
</CustomField>