sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Other_Destination__c.field-meta.xml
<CustomField>
    <fullName>Other_Destination__c</fullName>
    <label>Other Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>