sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Other_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Pickup_Location__c</fullName>
    <label>Other Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>