sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Other_Return_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Return_Location__c</fullName>
    <label>Other Return Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>