sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Payment_Processed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processed__c</fullName>
    <formula>OR(
   NOT( EPR__c = null),
   NOT(  EPR_Payable_Item__c = null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Processed</label>
    <type>Checkbox</type>
</CustomField>