sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Quote_Comments__c.field-meta.xml
<CustomField>
    <fullName>Quote_Comments__c</fullName>
    <inlineHelpText>Any further comments associated with the quote provided</inlineHelpText>
    <label>Quote Comments</label>
    <type>TextArea</type>
</CustomField>