sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Reason_for_Trip__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Trip__c</fullName>
    <label>Reason for Trip</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>