sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Recommended_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Sanergy Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Recommended_Vendor</relationshipName>
    <type>Lookup</type>
</CustomField>