sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Requesting_Employee__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requesting Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Requesting_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>