sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Start_GPS__c.field-meta.xml
<CustomField>
    <fullName>Start_GPS__c</fullName>
    <label>Start GPS</label>
    <scale>13</scale>
    <type>Location</type>
</CustomField>