sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Start_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Start_Mileage__c</fullName>
    <inlineHelpText>The vehicle&#39;s mileage value in Kilometers  before the trip</inlineHelpText>
    <label>Start Mileage (Km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>