sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approving_Team_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>