sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Team_Lead_Approved__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Lead Approved</label>
    <type>Checkbox</type>
</CustomField>