sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Total_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Cost__c</fullName>
    <label>Total Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>