sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <inlineHelpText>Total Estimated Cost</inlineHelpText>
    <label>Total Estimated Cost</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>