sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sanergy_Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vehicles</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipName>Fleet_Legs</relationshipName>
    <type>Lookup</type>
</CustomField>