sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
            </value>
            <value>
                <fullName>Pick-up truck</fullName>
            </value>
            <value>
                <fullName>4*4 truck</fullName>
            </value>
            <value>
                <fullName>3tn truck</fullName>
            </value>
            <value>
                <fullName>5tn truck</fullName>
            </value>
            <value>
                <fullName>7tn truck</fullName>
            </value>
            <value>
                <fullName>Heavy goods vehicle</fullName>
            </value>
            <value>
                <fullName>Saloon</fullName>
            </value>
            <value>
                <fullName>7 - seater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>