sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Was_the_ride_safe__c.field-meta.xml
<CustomField>
    <fullName>Was_the_ride_safe__c</fullName>
    <label>Was the ride safe?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>