sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/fields/Was_the_service_on_time__c.field-meta.xml
<CustomField>
    <fullName>Was_the_service_on_time__c</fullName>
    <label>Was the service on time?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>