sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/recordTypes/Fleet_Request_before_Approval.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Request_before_Approval</fullName>
    <active>true</active>
    <label>Fleet Request-before Approval</label>
</RecordType>