sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/validationRules/End_mileage_not_less_than_start_mileage.validationRule-meta.xml
<ValidationRule>
    <fullName>End_mileage_not_less_than_start_mileage</fullName>
    <active>true</active>
    <description>End mileage not less than start mileage</description>
    <errorConditionFormula>End_Mileage__c &lt;  Start_Mileage__c</errorConditionFormula>
    <errorMessage>End mileage should not be less than start mileage</errorMessage>
</ValidationRule>