sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/validationRules/If_issues_present_then_list_them.validationRule-meta.xml
<ValidationRule>
    <fullName>If_issues_present_then_list_them</fullName>
    <active>true</active>
    <description>Please list the issues you want to project to the Fleet Management Team(FMT) here</description>
    <errorConditionFormula>AND(   ISPICKVAL(Are_there_Issues_you_wish_to_escalate_to__c,&quot;Yes&quot;) , ISBLANK( List_them_here__c ))</errorConditionFormula>
    <errorMessage>Please list the issues you want to project to the Fleet Management Team(FMT) here</errorMessage>
</ValidationRule>