sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/validationRules/RequestDateBeAtLeast7Days.validationRule-meta.xml
<ValidationRule>
    <fullName>RequestDateBeAtLeast7Days</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
 AND( Departure_Date__c  - today() &lt; 2, ISNEW()),
  Departure_Date__c  - DATEVALUE(CreatedDate) &lt; 2
)</errorConditionFormula>
    <errorDisplayField>Departure_Date__c</errorDisplayField>
    <errorMessage>Departure date must not be less than 2 days</errorMessage>
</ValidationRule>