sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/validationRules/Return_Date_not_less_that_Departure_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date_not_less_that_Departure_date</fullName>
    <active>true</active>
    <errorConditionFormula>Return_Date__c &lt;  Departure_Date__c</errorConditionFormula>
    <errorMessage>Return date cannot be less than departure date</errorMessage>
</ValidationRule>