sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/validationRules/Validation_for_cargo_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_cargo_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Cargo__c ,&quot;Yes&quot;),
ISBLANK( Cargo_Details__c )
)</errorConditionFormula>
    <errorDisplayField>Cargo_Details__c</errorDisplayField>
    <errorMessage>Kindly specify the cargo details</errorMessage>
</ValidationRule>