sfSandBoxCode/force-app/main/default/objects/Fleet_Requests__c/validationRules/Validation_for_Internal_Fleet_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Internal_Fleet_Request</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Fleet_Request_Category__c, &quot;Internal Fleet&quot;),
ISBLANK(  Designated_Driver__c )
)</errorConditionFormula>
    <errorMessage>If the Fleet request category is internal, kindly specify the &quot;Designated Driver&quot;</errorMessage>
</ValidationRule>